Fix spacing on questions screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ p {
   display: flex;
   height: 10px;
   margin: 5px;
+  font-size: 1.1rem;
   padding: 0;
 }
 
